adjusted queries for data reality

--- a/millerknoll/queries/.ksync/ksync.properties
+++ b/millerknoll/queries/.ksync/ksync.properties
@@ -1,5 +1,5 @@
-#Tue Mar 07 06:53:04 CST 2023
-remoteHash=1059211f19130d2a34c8ecb2c13b2a7b499ab98b
+#Fri Mar 17 12:00:09 CDT 2023
+remoteHash=e89d9f366d7bc50e81fb0b5feabe73415e446c42
 url=https\://millerknoll.admin.kademiplay.com/repositories/queries/version1/
 userUrl=/users/maritzbill
-userUrlHash=0e9e2e4c-5ebf-45ff-ace4-4d81f5ed7e09\:Aiq6VoYT3oqhq4yYdwYXMBsIwNo
+userUrlHash=9b632fe6-f5a2-4dbf-8f66-f3c0cac90731\:gb5_N-cjkpZIez3Gdb3zxFpsQGc
